--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^8.5.4",
     "nodemailer": "^6.9.14",
     "ts-node-dev": "^2.0.0",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemailer": "^6.4.15",
+    "@types/uuid": "^10.0.0",
     "typescript": "^5.5.4"
   }
 }
